pin matcher validated

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </div>
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
+                    <input id="numbers-display" class="form-control" type="text">
                     <div class="numbers">
-                        <div class="calc-body">
+                        <div id="buttons" class="calc-body">
                             <div class="calc-button-row">
                               <div class="button">7</div>
                               <div class="button">8</div>
@@ -42,16 +42,17 @@
                                 <div class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <button id="submit-button" type="submit" class="submit-btn">Submit</button>
+                                <p class="action-left"><span id="try-left">3</span> try left</p>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="notify-section">
-            <p class="notify">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+            <p id="notify-failed" class="notify">❌ Pin Didn't Match, Please try again</p>
+            <p id="notify-succed" class="notify">✅ Pin Matched... Secret door is opening for you</p>
+            <p id="try-limit-cross" class="notify">❌ You enter Incorrect Pin several times. You can't try again</p>
         </div>
     </div>
     <!-- external script file -->
